--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "prisma db push && next start"
+    "start": "next start"
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
